--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <meta charset='utf-8' />
-      <title>New York College Map</title>
-      <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-      <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.css' rel='stylesheet' />
-      <link href='css/styles.css' rel='stylesheet' />
+    <meta charset='utf-8' />
+    <title>New York College Map</title>
+    <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.css' rel='stylesheet' />
+    <link href='css/styles.css' rel='stylesheet' />
   </head>
+
   <body>
-  
+    <!-- the sidebar is fixed width and will contain a title, some text, and buttons -->
+    <div id='sidebar'>
+      <h3>New York College Map</h3>
+      <p>ABOUT THIS MAP</p>
+
+      <div id='feature-info'>
+      </div>
+    </div>
+    <!-- close sidebar -->
     <!-- this is the map container, which will hold the mapboxGL map -->
     <div id='map-container'></div>
 
