attempt to add drop down

--- a/index.html
+++ b/index.html
@@ -14,12 +14,20 @@
       <h3>New York College Map</h3>
       <p>ABOUT THIS MAP</p>
 
+      <select id="select-college"></select>
+
+      <br>
+
       <div id='feature-info'>
+
       </div>
     </div>
     <!-- close sidebar -->
+
     <!-- this is the map container, which will hold the mapboxGL map -->
-    <div id='map-container'></div>
+    <div id='map-container'>
+
+    </div>
 
     <!-- Load mapboxGL, jQuery, then our local javascript files -->
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.js'></script>
