--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
     <div id='sidebar'>
       <h3>New York College Map</h3>
       <p>ABOUT THIS MAP</p>
-
-      <select id="select-college"></select>
-
-      <br>
+      <div class="dropdown">
+        <select id="college-dropdown" name="college-name" class="dropbtn"></select>
+      </div>
 
       <div id='feature-info'>
 
