--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
       <h3>New York College Map</h3>
       <p>ABOUT THIS MAP</p>
       <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="college-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown button
+        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
         </button>
+        <div class="dropdown-menu">
+        </div>
       </div>
 
       <div id='feature-info'>
