fixed bar chart;

--- a/index.html
+++ b/index.html
@@ -19,30 +19,29 @@
 
   <div id='sidebar'>
     <h2>Colleges in New York State</h2>
-      <h4>Why This Map?</h4>
-      <p>Over the past 10 years, on average 52k students graduate from New York City Public
-        Schools annually. The school system also reports consistent gains in 4-yr high school
-        graduation rates from <strong>60.7% for the class of 2009 to 77.3% for the class of 2019</strong>.
-        While gains in 4-yr high school graduation rates have been notable, school
-        leaders now are making moves to improve their rate of postsecondary enrollment
-        and persistence &mdash; getting their high school graduates to and through college. </p>
-      <p>While the benefits of a 4-year college degree are more/less universally acknowledged,
-        it is important to recognize that those benefits can only be realized if a student
-        persists and earns a degree. Otherwise, postsecondary enrollment alone generates an
-        enormous amount of financial burden. </p>
-      <p>This map aims to highlight a key metric that is often left out when discussing
-        college choice &mdash; <em>150% completion rate</em>. This measure reflects
-        the "6 year graduation rate for first-time, full-time undergraduate students
-        who began seeking a bachelor’s degree at 4-year degree-granting institutions".
-        (NCES, 2019) For college students who entered in the fall of 2011, their
-        150% completion rate was 60% overall. This means by 2017, 60% of the students
-        who entered in 2011 completed their degree. </p>
+    <h4>Why This Map?</h4>
+    <p>Over the past 10 years, on average 52k students graduate from New York City Public
+      Schools annually. The school system also reports consistent gains in 4-yr high school
+      graduation rates from <strong>60.7% for the class of 2009 to 77.3% for the class of 2019</strong>.
+      While gains in 4-yr high school graduation rates have been notable, school
+      leaders now are making moves to improve their rate of postsecondary enrollment
+      and persistence &mdash; getting their high school graduates to and through college. </p>
+    <p>While the benefits of a 4-year college degree are more/less universally acknowledged,
+      it is important to recognize that those benefits can only be realized if a student
+      persists and earns a degree. Otherwise, postsecondary enrollment alone generates an
+      enormous amount of financial burden. </p>
+    <p>This map aims to highlight a key metric that is often left out when discussing
+      college choice &mdash; <em>150% completion rate</em>. This measure reflects
+      the "6 year graduation rate for first-time, full-time undergraduate students
+      who began seeking a bachelor’s degree at 4-year degree-granting institutions".
+      (NCES, 2019) Chart below shows the &percnt; of students who completed a
+      4-year degree within 150% time / 6-years since entering college in 2011.(NCES, 2019) </p>
 
-        <canvas id="myBarChart"></canvas>
+    <canvas id="myBarChart"></canvas>
 
-        <br>
-        <p style="font-size:medium;"><strong>🎒Select A College to Explore</strong></p>
-        <p>(Use Dropdown or Hover over map)</p>
+    <br>
+    <p style="font-size:medium;"><strong>🎒Select A College to Explore</strong></p>
+    <p>(Use Dropdown or Hover over map)</p>
     <div class="input-group">
       <input type="text" class="form-control" aria-label="Text input with dropdown button" id="collegeNameText">
       <div class="input-group-append">
@@ -70,7 +69,7 @@
           The Condition of Education 2019 (NCES 2019-144),
           <a href="https://nces.ed.gov/programs/coe/indicator_ctr.asp">Undergraduate Retention
             and Graduation Rates.</a></li>
-        <li>Urban Institute. Education Data Portal. <a href = "https://educationdata.urban.org/documentation/colleges.html#overview">Full Api</a>.</li>
+        <li>Urban Institute. Education Data Portal. <a href="https://educationdata.urban.org/documentation/colleges.html#overview">Full Api</a>.</li>
       </ul>
     </div>
 
