--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       (NCES, 2019) Chart below shows the &percnt; of students who completed a
       4-year degree within 150% time / 6-years since entering college in 2011.(NCES, 2019) </p>
 
-    <canvas id="myBarChart"></canvas>
+    <canvas id="completersBarChart"></canvas>
 
     <br>
     <p style="font-size:medium;"><strong>🎒Select A College to Explore</strong></p>
@@ -52,26 +52,21 @@
     </div>
 
     <div id='feature-info'>
-
-      <div class="card-body">
-        <div class="chart-pie pt-4">
-          <canvas id="myPieChart"></canvas>
-        </div>
-        <hr>
-      </div>
-
+      <canvas id="collegeBarCharts"></canvas>
     </div>
 
-    <div class="details">
-      <h4>Data Sources</h4>
-      <ul>
-        <li>U.S. Department of Education, National Center for Education Statistics. (2019).
-          The Condition of Education 2019 (NCES 2019-144),
-          <a href="https://nces.ed.gov/programs/coe/indicator_ctr.asp">Undergraduate Retention
-            and Graduation Rates.</a></li>
-        <li>Urban Institute. Education Data Portal. <a href="https://educationdata.urban.org/documentation/colleges.html#overview">Full Api</a>.</li>
-      </ul>
-    </div>
+  </div>
+
+  <div class="details">
+    <h4>Data Sources</h4>
+    <ul>
+      <li>U.S. Department of Education, National Center for Education Statistics. (2019).
+        The Condition of Education 2019 (NCES 2019-144),
+        <a href="https://nces.ed.gov/programs/coe/indicator_ctr.asp">Undergraduate Retention
+          and Graduation Rates.</a></li>
+      <li>Urban Institute. Education Data Portal. <a href="https://educationdata.urban.org/documentation/colleges.html#overview">Full Api</a>.</li>
+    </ul>
+  </div>
 
   </div>
   <!-- close sidebar -->
