--- a/index.html
+++ b/index.html
@@ -51,22 +51,22 @@
       </div>
     </div>
 
+<div id = 'feature'>
     <div id='feature-info'>
-      <canvas id="collegeBarCharts"></canvas>
     </div>
+    <canvas id="collegeBarChart"></canvas>
+</div>
 
-  </div>
-
-  <div class="details">
-    <h4>Data Sources</h4>
-    <ul>
-      <li>U.S. Department of Education, National Center for Education Statistics. (2019).
-        The Condition of Education 2019 (NCES 2019-144),
-        <a href="https://nces.ed.gov/programs/coe/indicator_ctr.asp">Undergraduate Retention
-          and Graduation Rates.</a></li>
-      <li>Urban Institute. Education Data Portal. <a href="https://educationdata.urban.org/documentation/colleges.html#overview">Full Api</a>.</li>
-    </ul>
-  </div>
+    <div class="details">
+      <h4>Data Sources</h4>
+      <ul>
+        <li>U.S. Department of Education, National Center for Education Statistics. (2019).
+          The Condition of Education 2019 (NCES 2019-144),
+          <a href="https://nces.ed.gov/programs/coe/indicator_ctr.asp">Undergraduate Retention
+            and Graduation Rates.</a></li>
+        <li>Urban Institute. Education Data Portal. <a href="https://educationdata.urban.org/documentation/colleges.html#overview">Full Api</a>.</li>
+      </ul>
+    </div>
 
   </div>
   <!-- close sidebar -->
